added state to the webapp

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
   <body>
     <h1><span style="color: #48A300;">Focus on</span> Today</h1>
     <main>
-      <h2 class="heading">Today <img width="50" src="./assets/sun.svg" alt="Sun image" /></h2>
+      <h2 class="heading">Today <div class="sun"><img class="rotating-sun" width="50" src="./assets/sun2.svg" alt="Sun image" /><img class="smile-image" src="./assets/smile2.svg" alt=""></div> </h2>
       <p class="raise-bar-text">Raise the bar by completing your goals!</p>
       <div class="bar"><div class="show-completed"></div></div>
-      <p class="alert">Please set all the 3 goals!</p>
+      <p class="alert hidden">Please set all the 3 goals!</p>
       <div class="tasks-container">
         <div class="input-container">
             <div class="is-completed"></div>
-            <input type="text" placeholder="Add new goal...">
+            <input type="text" class="input1" placeholder="Add new goal...">
         </div>
         <div class="input-container">
             <div class="is-completed"></div>
-            <input type="text" placeholder="Add new goal...">
+            <input type="text" class="input2" placeholder="Add new goal...">
         </div>
         <div class="input-container">
             <div class="is-completed"></div>
-            <input type="text" placeholder="Add new goal...">
+            <input type="text" class="input3" placeholder="Add new goal...">
         </div>
       </div>
       <h3>“Move one step ahead, today!”</h3>
