optmise the code

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1><span style="color: #48A300;">Focus on</span> Today</h1>
     <main>
       <h2 class="heading">Today <div class="sun"><img class="rotating-sun" width="50" src="./assets/sun2.svg" alt="Sun image" /><img class="smile-image" src="./assets/smile2.svg" alt=""></div> </h2>
-      <p class="raise-bar-text">Raise the bar by completing your goals!</p>
-      <div class="bar"><div class="show-completed"></div></div>
+      <p class="raise-bar-text"><span class="quotes">Raise the bar by completing your goals!</span> <button title="Remove all task" class="resetAll">Reset All</button></p>
+      <div class="bar"><div class="show-completed"><span class="status"></span></div></div>
       <p class="alert hidden">Please set all the 3 goals!</p>
       <div class="tasks-container">
         <div class="input-container">
@@ -33,6 +33,7 @@
             <div class="is-completed"></div>
             <input type="text" class="input3" placeholder="Add new goal...">
         </div>
+        
       </div>
       <h3>“Move one step ahead, today!”</h3>
       <p class="last-words">Made with ❤️ by Roshan Bhagat</p>
